# image-labeler

./: README.md  pyproject.toml
src/: app.py
src/resource/: categories.json  labels.json
src/templates/: index.html
