[project]
name = "image-labeler"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "evprice", email = "elprice11@gmail.com" }
]
dependencies = [
    "flask>=3.0.2",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]

[tool.rye.scripts]
server = "flask run --debug"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/image_viewer"]
